# MusicAI

./: .env.example  .gitignore  LICENSE  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
apps/api/musicai_api/: __init__.py  main.py  settings.py
apps/web/: package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: benchmark-format.ts  load-alphatab.ts  tab-format.test.ts  tab-format.ts
apps/worker/musicai_worker/: __init__.py  cli.py  demix_validator.py  guitar_demix.py  guitar_isolation.py  ingest.py  logging_setup.py  pipeline.py  stage_runners.py  stem_manifest.py
benchmarks/: manifest.json  run_benchmark.py  run_ground_truth_benchmark.py
benchmarks/enter_sandman/: compare_tabs.py  demo_calibrator.py  reference_intro.json  run_investor_demo.py  run_stress_test.py
benchmarks/enter_sandman/assets/: README.md
benchmarks/ground_truth/: manifest.json
benchmarks/reports/: go-no-go.md  latest.json
docs/: architecture.md
infra/: Dockerfile.api  Dockerfile.web  docker-compose.yml
scripts/: start-api.sh
tests/integration/: test_api_config.py  test_pipeline.py
tests/unit/: test_aco_fingering.py  test_compare_tabs.py  test_demix_validator.py  test_demo_calibrator.py  test_fingering.py  test_fusion.py  test_gp5_importer.py  test_guitar_demix.py  test_guitar_isolation.py  test_ingest.py  test_job_progress.py  test_quality.py  test_reference_scoring.py  test_stem_assets.py  test_tab_alignment.py  test_tab_export.py
tests/unit/inference/: test_audio_classifier.py  test_bs_roformer_adapter.py  (+8 more)
(+29 files in other folders)
